<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_alarm_settings"
        android:title="@string/settings_alarms"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_channel_settings"
        android:title="@string/channel_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_select_channel"
        android:title="@string/channel_select"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_language_settings"
        android:title="@string/language_select"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_connect_bluetooth"
        android:title="Connect Bluetooth"
        app:showAsAction="never" />
</menu>
